--- a/.github/DISCUSSION_TEMPLATE/submissions.yml
+++ b/.github/DISCUSSION_TEMPLATE/submissions.yml
@@ -30,13 +30,14 @@ body:
       placeholder: "e.g., https://github.com/yourusername/your-repository/notebook.ipynb"
     validations:
       required: true
-  - type: checkboxes
-    id: guidelines-check
+  - type: dropdown
+    id: guidelines-confirmation
     attributes:
       label: Formatting Guidelines Confirmation
-      description: "Confirm that your submission adheres to the specified formatting guidelines."
+      description: "Confirm that your submission follows the specified formatting guidelines."
       options:
-        - label: "I confirm that my submission follows the formatting guidelines, with no extraneous debug/print statements and all solutions and visuals are rendered."
+        - "Yes, I confirm that my submission follows the formatting guidelines, with no extraneous debug/print statements and all solutions and visuals are rendered."
+        - "No"
     validations:
       required: true
   - type: textarea
